--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>Tech It Easy Dashboard</title>
 </head>
 <body>
+<main>
+    <section id="marketing"></section>
+    <section id="allBrands"></section>
+    <section id="printTv"></section>
 
+    <button id="price-button">Price</button>
+    <button id="ambi-button">Ambilight</button>
+    <button id="sold-button">Sold out</button>
+    <section id="printTvs"></section>
+
+</main>
 <script src="main.js"></script>
+<script src="functions.js"></script>
 </body>
 </html>
